--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/expenses_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
-</android.support.v7.widget.RecyclerView>
+    >
+    <!-- Header -->
+    <LinearLayout
+        android:id="@+id/list_header_linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@color/colorPrimaryDark"
+        >
+        <!-- Month -->
+        <TextView
+            android:id="@+id/header_date_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            />
+        <!-- Expense -->
+        <TextView
+            android:id="@+id/header_expenses_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:gravity="center_vertical|end"
+            android:text="0.00 AED"
+            android:layout_marginRight="10dp"
+            />
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/expenses_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.MainActivity"
+        android:layout_below="@id/list_header_linear_layout"
+        >
+    </android.support.v7.widget.RecyclerView>
+</RelativeLayout>
