--- a/app/src/main/res/layout/transactions_card_layout.xml
+++ b/app/src/main/res/layout/transactions_card_layout.xml
@@ -1,86 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/expenses_recycler_view"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="4dp"
-    card_view:cardUseCompatPadding="true"
-    android:background="@android:color/white"
+    android:orientation="vertical"
     >
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <include
+        layout="@layout/transactions_header"
+        android:visibility="gone"
+        />
+
+    <!-- Content -->
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/expenses_recycler_view"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="4dp"
+        card_view:cardUseCompatPadding="true"
         android:background="@android:color/white"
         >
-
-        <RelativeLayout
-            android:id="@+id/general_content_relative_layout"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:orientation="vertical"
+            android:background="@android:color/white"
             >
 
-            <!-- Source -->
-            <TextView
-                android:id="@+id/source_text_view"
+            <RelativeLayout
+                android:id="@+id/general_content_relative_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/source_logo_image_view"
-                android:textSize="@dimen/expense_list_title_size"
-                android:text="Company name"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="5dp"
-                android:ellipsize="end"
-                />
+                >
 
-            <!-- Logo -->
-            <ImageView
-                android:id="@+id/source_logo_image_view"
-                android:layout_width="@dimen/expense_list_logo"
-                android:layout_height="@dimen/expense_list_logo"
-                android:adjustViewBounds="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:scaleType="fitCenter"
-                android:visibility="invisible"
-                android:src="@drawable/logo_spinneys"
-                />
+                <!-- Source -->
+                <TextView
+                    android:id="@+id/source_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/source_logo_image_view"
+                    android:textSize="@dimen/expense_list_title_size"
+                    android:text="Company name"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="5dp"
+                    android:ellipsize="end"
+                    />
 
-            <!-- Quantity -->
-            <TextView
-                android:id="@+id/quantity_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/source_text_view"
-                android:layout_marginTop="5dp"
-                android:layout_toLeftOf="@+id/source_logo_image_view"
-                android:layout_marginRight="5dp"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:layout_alignBottom="@+id/date_text_view"
-                android:text="transaction"
-                android:gravity="bottom"
-                android:textSize="@dimen/expense_list_expense_size"
-                />
+                <!-- Logo -->
+                <ImageView
+                    android:id="@+id/source_logo_image_view"
+                    android:layout_width="@dimen/expense_list_logo"
+                    android:layout_height="@dimen/expense_list_logo"
+                    android:adjustViewBounds="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:scaleType="fitCenter"
+                    android:visibility="invisible"
+                    android:src="@drawable/logo_spinneys"
+                    />
 
-            <!-- Date -->
-            <TextView
-                android:id="@+id/date_text_view"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_below="@+id/source_logo_image_view"
-                android:layout_alignParentRight="true"
-                android:gravity="center|bottom"
-                android:text="date"
-                />
+                <!-- Quantity -->
+                <TextView
+                    android:id="@+id/quantity_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/source_text_view"
+                    android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@+id/source_logo_image_view"
+                    android:layout_marginRight="5dp"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:layout_alignBottom="@+id/date_text_view"
+                    android:text="transaction"
+                    android:gravity="bottom"
+                    android:textSize="@dimen/expense_list_expense_size"
+                    />
 
-        </RelativeLayout>
-    </LinearLayout>
+                <!-- Date -->
+                <TextView
+                    android:id="@+id/date_text_view"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_below="@+id/source_logo_image_view"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center|bottom"
+                    android:text="date"
+                    />
 
-</android.support.v7.widget.CardView>
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
