--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,18 @@
         android:layout_below="@+id/header_linear_layout"
         >
     </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/no_sms_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:text="@string/main_activity_no_sms"
+        style="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        />
 </RelativeLayout>
