--- a/app/src/main/res/layout/activity_monthly_transactions.xml
+++ b/app/src/main/res/layout/activity_monthly_transactions.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.MonthlyTransactionsActivity">
     
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/monthly_transactions_bar_chart"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
